[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Explosion.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[node name="Explosion" type="Area2D"]
pause_mode = 2
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="TimerBlack" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="TimerWhite" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_Explosion_body_entered"]
[connection signal="timeout" from="TimerBlack" to="." method="_on_TimerBlack_timeout"]
[connection signal="timeout" from="TimerWhite" to="." method="_on_TimerWhite_timeout"]
